[Autofill]Enable mojo AutofillDriver for android_webview.

BUG=662040

Review-Url: https://codereview.chromium.org/2491103003
Cr-Commit-Position: refs/heads/master@{#433418}

Former-commit-id: e404109db1d011479ea0fee59c5d415f44d73b22