android_webview/browser/aw_content_browser_client.h
@@ -132,6 +132,9 @@ class AwContentBrowserClient : public content::ContentBrowserClient {
   content::DevToolsManagerDelegate* GetDevToolsManagerDelegate() override;
   std::unique_ptr<base::Value> GetServiceManifestOverlay(
       const std::string& name) override;
+  void RegisterRenderFrameMojoInterfaces(
+      service_manager::InterfaceRegistry* registry,
+      content::RenderFrameHost* render_frame_host) override;
 
  private:
   // Android WebView currently has a single global (non-off-the-record) browser
